control-container/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: control.local
    http:
      paths:
      - path: /control(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: control
            port:
              number: 5001
